--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,14 @@
 @import '../node_modules/antd/dist/antd.css';
 @import url('https://fonts.googleapis.com/css?family=Sniglet&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed:300,300i,400,500,600&display=swap');
 
 .text-google-font{
-  font-family: 'Sniglet',sans-serif;
+  font-family: 'Fira Sans Extra Condensed',sans-serif;
   font-size: 1rem;
 }
 
 .logo-text{
-  font-family: 'Sniglet', sans-serif;
+  font-family: 'Fira Sans Extra Condensed', sans-serif;
   font-size:2rem;
   vertical-align: middle;
   margin-left: 0.33rem;
