--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,18 @@ flex-direction: column;
 .ml-most{
   margin-left: 1rem;
 }
+.mt-1{
+  margin-top: 0.1rem;
+}
+.mt-2{
+  margin-top: 0.2rem;
+}
+.mt-3{
+  margin-top: 0.3rem;
+}
+.mt-most{
+  margin-top: 1rem;
+}
 
 .mr-1{
   margin-right: 0.1rem;
@@ -121,4 +133,38 @@ flex-direction: column;
 }
 .fw-700{
   font-weight: 700;
+}
+.box{
+  transition: box-shadow .5s;
+  border: 0.2px solid rgba(204, 204, 204, .5);
+  
+}
+.box:hover {
+  box-shadow: 0 0 5px rgba(33,33,33,.1); 
+  border: 0.2px solid rgba(204, 204, 204, .75);
+}
+.aktiviti-boxitem{
+  width: 100%;
+  height: 200px;
+  background-size: contain;
+  cursor: pointer;
+  background-repeat: no-repeat;
+}
+.color-success{
+  color: #1d9e86;
+}
+.color-primary{
+  color: #1890ff;
+}
+.color-danger{
+  color: #fa5477;
+}
+.font-size-10{
+  font-size: 1rem;
+}
+.font-size-15{
+  font-size: 1.5rem;
+}
+.font-size-20{
+  font-size: 2rem;
 }
