--- a/src/App.css
+++ b/src/App.css
@@ -171,3 +171,58 @@ flex-direction: column;
 .font-size-20{
   font-size: 2rem;
 }
+
+.page-login-image{
+  width: 100%;
+  height: 100vh;
+  background-position:center center;
+  background-size: cover;
+}
+.page-login-screen{
+  width: 80%;
+  height: 50vh;
+  margin-left: 10%;
+  margin-bottom: 10vh;
+}
+.page-login-logo-col{
+  margin-top: 5vh;
+  height: 10vh;
+ justify-content: center;
+vertical-align: middle;
+align-content: center;
+text-align: center;
+}
+.page-login-logo{
+  width: 120px;
+  height: 50px;
+}
+.page-login-thumbnail-text{
+  width: 100%;
+  height: auto;
+  position: absolute;
+  background-color:rgba(255, 255, 255, 0.1);
+  filter: opacity(10);
+  color: #ffffff;
+  font-size: 2rem;
+  text-align: center;
+  bottom: 20vh;
+}
+
+.information-header{
+  width: 100%;
+  background: #1890ff;
+  color: rgb(255, 255, 255);
+  height: 20vh;
+  align-content: center;
+  text-align: center;
+  justify-content: center;
+  justify-items: center;
+  justify-self: center;
+  font-size: 4rem;
+}
+.information-direction-btns{
+  position: absolute;
+  float: left;
+  margin-top: 40px;
+  margin-left: 100px;
+}
